logs/bopy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bopy'...
Listing './lib/python3.5/site-packages/bopy/core'...
Compiling './lib/python3.5/site-packages/bopy/core/core.py'...
***   File "./lib/python3.5/site-packages/bopy/core/core.py", line 98
    print "@Cham: test passed ..."
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bopy/helpers'...
Listing './lib/python3.5/site-packages/bopy/helpers/ezpadova'...
Compiling './lib/python3.5/site-packages/bopy/helpers/ezpadova/isochrone_grid.py'...
***   File "./lib/python3.5/site-packages/bopy/helpers/ezpadova/isochrone_grid.py", line 323
    def _test():
               ^
SyntaxError: import * only allowed at module level

Listing './lib/python3.5/site-packages/bopy/mcmctools'...
Compiling './lib/python3.5/site-packages/bopy/mcmctools/emcee_try_20140704.py'...
***   File "./lib/python3.5/site-packages/bopy/mcmctools/emcee_try_20140704.py", line 74
    print result['x']
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bopy/mcmctools/emceetools.py'...
***   File "./lib/python3.5/site-packages/bopy/mcmctools/emceetools.py", line 127
    print "@Cham: test function not implemented ..."
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bopy/obstools'...
Listing './lib/python3.5/site-packages/bopy/obstools/Xinglong216HRS'...
Compiling './lib/python3.5/site-packages/bopy/obstools/Xinglong216HRS/obslog.py'...
***   File "./lib/python3.5/site-packages/bopy/obstools/Xinglong216HRS/obslog.py", line 81
    print 'Error', filename, 'does not exist'
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bopy/obstools/Xinglong216HRS/py_wspectext.py'...
***   File "./lib/python3.5/site-packages/bopy/obstools/Xinglong216HRS/py_wspectext.py", line 51
    print '@Cham: nrow = %d, ncol=%d' % (nrow, ncol)
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bopy/obstools/finder_chart.py'...
***   File "./lib/python3.5/site-packages/bopy/obstools/finder_chart.py", line 103
    print c.dec.dms.m
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bopy/spec'...
Compiling './lib/python3.5/site-packages/bopy/spec/echelle.py'...
***   File "./lib/python3.5/site-packages/bopy/spec/echelle.py", line 146
    print len(filelist)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bopy-0.2.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
